k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-client-deployment
spec:
  selector:
    matchLabels:
      app: note-client
  template:
    metadata:
      labels:
        app: note-client
    spec:
      containers:
        - name: note-client
          image: note-client
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-vol
              mountPath: /build/static/etc/env-config.js
              subPath: env-config.js
              readOnly: true
      volumes:
        - name: config-vol
          configMap:
            name: client-env-config

---
apiVersion: v1
kind: Service
metadata:
  name: note-client
spec:
  type: LoadBalancer
  selector:
    app: note-client
  ports:
    - port: 5080
      targetPort: 5000
