k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-server-deployment
spec:
  selector:
    matchLabels:
      app: note-server
  template:
    metadata:
      labels:
        app: note-server
    spec:
      containers:
        - name: note-server
          image: note-server
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: note-server
spec:
  type: LoadBalancer
  selector:
    app: note-server
  ports:
    - port: 5081
      targetPort: 8080
